--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2153,7 +2153,7 @@
 	}
 
 		.item header {
-			background: #f33;
+			background: #fff;
 			margin: 0;
 			padding: 1em 0 1em 0;
 			font-size: 0.8em;
