--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2146,7 +2146,7 @@
 		}
 
 /* Item */
-
+<!--
 	.item {
 		box-shadow: 0 0.05em 0.15em 0 rgba(0, 0, 0, 0.05);
 		margin-bottom: 40px;
@@ -2163,7 +2163,7 @@
 				font-size: 1em;
 			}
 
-
+-->
 
 /* Icon */
 
